Fix homepage text alignment

--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,11 @@
 
 * {
     box-sizing: border-box;
+    
 }
 
 body {
     margin: 0px;
-    
     font-family: 'Inter';font-size: 22px;
 }
 
@@ -27,7 +27,7 @@ body {
 }
 
 .section-offset {
-    height: 700px;
+    height: 150px;
 }
 
 
@@ -77,15 +77,19 @@ header a {
 
     z-index: -9;
     background-repeat: no-repeat;
-    background-size: 130% 120%;
+    background-size: 110% 100%;
     height: 1000px;
     object-fit: cover;
     object-position: 50px -1000px;
 }
 
+.homepage-bg p {
+    text-align: end;
+}
+
 .container-left{
     float: left;
-    width: 50%;
+    flex: 1;
 }
 
 .homepage-right {
@@ -124,11 +128,15 @@ section {
     margin: 20px 0px;
 }
 
+.aboutme {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .aboutme-text {
     flex-direction: column;
     justify-content: flex;
     /* align-items: end; */
-    height: 80%;
     padding-right: 60px;
 }
 
@@ -140,7 +148,6 @@ section {
 
 .interests {
     background-color: var(--background-primary);
-    width: 100%;
     padding: 30px 100px 60px;
 }
 
@@ -154,6 +161,7 @@ section {
 
 .interests-box {
     background-color: red;
+    flex-basis: 100px;
     height: 570px;
     display: flex;
     flex-direction: column;
@@ -189,7 +197,7 @@ section {
     background-color: #0F0F0F;
     padding: 100px 60px;
     color: white;
-    height: 2000px;
+    height: 1400px;
 }
 
 .obsidian-plugins h1 {
@@ -199,4 +207,28 @@ section {
 .obsidian-plugins img {
     display: block;
     margin: auto;
+}
+
+.portfolio-heading-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 20px 0px;
+
+}
+
+.portfolio-heading-container h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    margin-block-end: 0px;
+}
+
+.plugin-section {
+    display: flex;
+    width: 100%;
+    height: 400px;
+}
+
+.plugin-section img {
+    border-radius: var(--border-radius);
 }
